--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="bg-gray-100 dark:bg-gray-800 dark" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prod Snap</title>
   </head>
